tests/lean/tokenErrors.lean
#check 'hi
example : Nat := 0  -- recover

#check '\y'
example : Nat := 0  -- recover

/-
-- these are all "fatal" 
#check "hi
#check hi.«
-/

#print Nat
/-
